--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,10 +1,28 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import { getCollection } from 'astro:content';
+
+const posts = await getCollection('blog');
 ---
 
-<Layout title="Blog - Mon Portfolio">
+<Layout title="Blog">
 	<main>
-		<h1>Mon Blog</h1>
-		<p>Les futurs articles seront listés ici.</p>
+		<h1>My Blog</h1>
+		<ul>
+            {posts.map((post) => (
+                <li>
+                    <a href={`/blog/${post.slug}`}>
+                        {post.data.title}
+                    </a>
+                    <time datetime={post.data.pubDate.toISOString()}>
+                        {new Date(post.data.pubDate).toLocaleDateString('en-US', {
+                            year: 'numeric',
+                            month: 'long',
+                            day: 'numeric',
+                        })}
+                    </time>
+                </li>
+            ))}
+        </ul>
 	</main>
 </Layout>
