erratum: implementation of blog list

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,7 +7,7 @@ const posts = (await getCollection('blog')).sort(
 );
 ---
 
-<Layout title="Blog - Mon Portfolio">
+<Layout title="Blog">
 	<main class="max-w-5xl mx-auto px-6 py-20">
 		<header class="mb-16">
 			<h1 class="text-4xl font-black mb-4">Articles & Pensées</h1>
