fix: small content changes

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="À propos - Mon Portfolio">
+<Layout title="About Me">
 	<main class="max-w-3xl mx-auto px-6 py-20 md:py-32">
 		<section class="space-y-12">
 			<p class="text-2xl md:text-3xl font-medium leading-relaxed text-text-main">
