chore: switch the site to french

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,9 +9,9 @@ import HeaderLink from './HeaderLink.astro';
     </a>
 
     <div class="flex gap-6 text-sm font-medium">
-      <HeaderLink href="/">Home</HeaderLink>
+      <HeaderLink href="/">Accueil</HeaderLink>
       <HeaderLink href="/blog">Blog</HeaderLink>
-      <HeaderLink href="/about">About</HeaderLink>
+      <HeaderLink href="/about">À propos</HeaderLink>
     </div>
   </nav>
 </header>
