--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,16 +9,15 @@ import Layout from '../layouts/Layout.astro';
 				EnawreM 
 			</h1>
 			<p class="text-xl text-text-muted leading-relaxed">
-				I write to slow down my thinking.
-				Writing is how I turn noise into structure.
+				J'écris pour transformer le bruit en structure.
 			</p>
 			<p class="text-xl leading-relaxed">
-				This site is a space for public reflection.
-				I share ideas in progress, notes drawn from my readings,
-				and attempts at bringing order to them.
+				Ce site est un espace de réflexion publique.
+				Je partage des idées en cours, des notes tirées de mes lectures,
+				et des tentatives pour y apporter de l'ordre.
         	</p>
 			<p class="text-sm text-gray-500 italic">
-			This site is meant to evolve. I experiment with ideas, structures, and design.
+			Ce site est en évolution constante. J'expérimente des idées, des structures, et du design.
 			</p>
 		</div>
 		</section>
