--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,8 +2,10 @@
 import { getCollection } from 'astro:content';
 import Layout from '../layouts/Layout.astro';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+
+const allPosts = await getCollection('blog');
+const posts = allPosts.sort(
+	(a, b) => b.data.pubDate.getTime() - a.data.pubDate.getTime()
 );
 ---
 
