--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import HeaderLink from './HeaderLink.astro';
+import ThemeToggle from './ThemeToggle.astro';
 ---
 
 <header class="border-b border-border bg-bg-page/80 backdrop-blur-md sticky top-0 z-50">
@@ -12,6 +13,7 @@ import HeaderLink from './HeaderLink.astro';
       <HeaderLink href="/">Accueil</HeaderLink>
       <HeaderLink href="/blog">Blog</HeaderLink>
       <HeaderLink href="/about">À propos</HeaderLink>
+      <ThemeToggle />
     </div>
   </nav>
 </header>
