--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -15,24 +15,14 @@ const { Content } = await post.render();
 ---
 
 <Layout title={post.data.title}>
-	<main class="max-w-3xl mx-auto px-6 py-20">
-		<article>
-			<header class="mb-12">
-				<time class="text-text-muted font-medium">
-					{post.data.pubDate.toLocaleDateString('fr-fr', {
-						year: 'numeric',
-						month: 'long',
-						day: 'numeric',
-					})}
-				</time>
-				<h1 class="text-4xl md:text-5xl font-black mt-2 leading-tight">
-					{post.data.title}
-				</h1>
-			</header>
-			
-			<div class="prose prose-slate lg:prose-xl max-w-none">
-				<Content />
-			</div>
-		</article>
-	</main>
+  <main class="max-w-3xl mx-auto px-6 py-20">
+    <header class="mb-12">
+        <time class="text-sm opacity-60 italic">{post.data.pubDate.toLocaleDateString()}</time>
+        <h1 class="text-4xl font-bold mt-2 leading-tight">{post.data.title}</h1>
+    </header>
+
+    <article class="prose lg:prose-lg dark:prose-invert">
+      <Content />
+    </article>
+  </main>
 </Layout>
