--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -15,7 +15,7 @@ const { Content } = await post.render();
 ---
 
 <Layout title={post.data.title}>
-  <main class="max-w-3xl mx-auto px-6 py-20">
+  <main class="max-w-3xl mx-auto px-6 py-20 pt-30">
     <header class="mb-12">
         <time class="text-sm opacity-60 italic">{post.data.pubDate.toLocaleDateString('fr-fr', {
 								year: 'numeric',
