--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,12 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Home - EnawreM">
-	<section class="max-w-5xl mx-auto px-6 md:py-12">
-		<div class="max-w-3xl">
-			<h1 class="text-5xl md:text-7xl font-black leading-tight mb-6">
+<Layout title="Accueil">
+  <main class="max-w-5xl mx-auto px-6 pt-30 pb-20">
+    <h1 class="text-5xl md:text-7xl font-black leading-tight mb-6">
 				EnawreM 
-			</h1>
-			<p class="text-xl text-text-muted leading-relaxed">
+	</h1>
+	<p class="text-xl text-text-muted leading-relaxed">
 				J'écris pour transformer le bruit en structure.
 			</p>
 			<p class="text-xl leading-relaxed">
@@ -19,7 +18,5 @@ import Layout from '../layouts/Layout.astro';
 			<p class="text-sm text-gray-500 italic">
 			Ce site est en évolution constante. J'expérimente des idées, des structures, et du design.
 			</p>
-		</div>
-		</section>
-
+    </main>
 </Layout>
